@@ -6,4 +6,5 @@ qjsonrpc 1.0 (10-29-2013)
 
 qjsonrpc 1.1 (UNRELEASED)
  * allow calling of Q_SIGNALS on service objects
+ * allow for removal of services from QJsonRpcServiceProvider
  * qt5 cleanups
